--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"dependencies": {
 		"@sentry/node": "^8.37.1",
-		"@sentry/profiling-node": "^8.37.1",		
+		"@sentry/profiling-node": "^8.37.1",
 		"axios": "^1.7.9",
 		"canvas": "^2.11.2",
 		"cloudinary": "^2.5.1",
@@ -28,18 +28,18 @@
 		"tsconfig-paths": "^4.2.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.14.0",
+		"@eslint/js": "^9.17.0",
 		"@types/module-alias": "^2.0.4",
 		"@types/node": "^22.9.0",
+		"@types/stremio-addon-sdk": "1.6.11",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
 		"@typescript-eslint/parser": "^8.13.0",
-		"eslint": "^9.14.0",
+		"eslint": "^9.17.0",
 		"globals": "^15.12.0",
 		"prettier": "^3.3.3",
 		"rimraf": "^6.0.1",
 		"tsc-alias": "^1.8.10",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.13.0",
-		"@types/stremio-addon-sdk":"1.6.11"
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.18.0"
 	}
 }
