--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,12 @@
-REDIS_HOST=""
-REDIS_PORT=""
-REDIS_DB=""
-REDIS_PASSWORD=""
+REDIS_HOST=redis-12396.c245.us-east-1-3.ec2.redns.redis-cloud.com
+REDIS_PORT=12396
+REDIS_DB=db-LYKF5ZB0
+REDIS_PASSWORD=6zBhg6grpa4lVG00KZX0YK1wfMlIUhzn
+CLOUDINARY_API_KEY=366521292619311
+CLOUDINARY_API_SECRET=sIXJHnDYWe9Sr1vBQ_FN7RcXs9I
+CLOUDINARY_CLOUD_NAME=dftgy3yfd
+RAPID_CRICKET_API_KEY=e56261b2e2msha48fb697c1e185dp18d4ffjsn3656a9b1fd85
+RAPID_FOOTBALL_HIGHLIGHTS_API=e56261b2e2msha48fb697c1e185dp18d4ffjsn3656a9b1fd85
+RAPID_LIVE_FOOTBALL_API=0951fdd3c2mshd0dfb3a00a30317p117a43jsnc3c837c63bb3
+TZ=Africa/Nairobi
+DATABASE_URL=mongodb+srv://ppvstream:pass3456@cluster0.ukebywk.mongodb.net/rapidfootballcatalog
